[package]
name = "pyadf-core"
version = "0.4.1"
edition = "2021"

[lib]
name = "_core"
crate-type = ["cdylib"]
path = "rust/src/lib.rs"

[dependencies]
pyo3 = { version = "0.24", features = ["extension-module", "abi3-py311"] }
serde_json = "1"
rayon = "1.10"
regex = "1"
pulldown-cmark = "0.12"
scraper = "0.22"
ego-tree = "0.10"

[profile.release]
lto = true
codegen-units = 1
strip = true
