[build-system]
requires = ["maturin>=1.7,<2"]
build-backend = "maturin"

[project]
name = "pyadf"
version = "0.4.1"
description = "A Python library for converting Atlassian Document Format (ADF) to Markdown"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    {name = "Youngseok Choi", email = "me@youngseok.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Rust",
    "Topic :: Text Processing :: Markup",
]
keywords = ["adf", "markdown", "atlassian", "converter", "confluence", "jira"]

[project.optional-dependencies]
dev = ["pytest>=7.0", "mypy>=1.0", "pyright>=1.1"]

[project.urls]
Homepage = "https://github.com/YoungseokCh/pyadf"
Repository = "https://github.com/YoungseokCh/pyadf"
Issues = "https://github.com/YoungseokCh/pyadf/issues"

[tool.maturin]
features = ["pyo3/extension-module", "pyo3/abi3-py311"]
module-name = "pyadf._core"
manifest-path = "Cargo.toml"
python-source = "src"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = []
